# Charan-CLI

./: README.md
Terminal_Ai/: .gitignore  AGENTS.md  CHARANCLI.md  FLOWS.md  MCP_SETUP_GUIDE.md  README.md  __init__.py  __main__.py  charancl_flowchart.drawio  main.py  pyproject.toml  rename_script.py  requirements.txt
Terminal_Ai/agent/: __init__.py  agent.py  events.py  session.py  state.py
Terminal_Ai/bot/: __init__.py  commands.py  telegram_bot.py
Terminal_Ai/cli/: __init__.py  command_handler.py  factory.py
Terminal_Ai/cli/commands/: __init__.py  base.py  init_commands.py  model_commands.py  permissions_commands.py  registry.py  run_commands.py  session_commands.py  system_commands.py  undo_commands.py  workflow_commands.py
Terminal_Ai/client/: __init__.py  gemini_client.py  llm_client.py  response.py
Terminal_Ai/config/: __init__.py  config.py  loader.py
Terminal_Ai/context/: __init__.py  compaction.py  loop_detector.py  manager.py
Terminal_Ai/hooks/: __init__.py  hook_system.py
Terminal_Ai/login-page/: index.html  script.js  style.css
Terminal_Ai/prompts/: __init__.py  mcp_reference.py  system.py
Terminal_Ai/safety/: __init__.py  approval.py
Terminal_Ai/scripts/: check_schemas.py  test_tool.py
Terminal_Ai/tools/: __init__.py  base.py  discovery.py  registry.py  subagent.py
Terminal_Ai/tools/builtin/: __init__.py  edit_file.py  glob.py  grep.py  read_file.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
Terminal_Ai/tools/mcp/: __init__.py  client.py  mcp_manager.py
Terminal_Ai/tools/workflow/: README.md  __init__.py  engine.py  fullstack.py  steps.py  workflow_tool.py
Terminal_Ai/ui/: __init__.py  tui.py
Terminal_Ai/utils/: __init__.py  file_attachments.py  git.py  text.py
