[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charancli"
version = "1.5.2"
description = "CharanCLI 🦁 — AI Coding Agent that runs inside your terminal"
readme = "README.md"
license = "MIT"
authors = [{ name = "Charan" }]
keywords = [
	"ai",
	"cli",
	"llm",
	"developer-tools",
	"agentic-ai",
	"ai-agents",
	"autonomous-agents",
	"ai-coding",
	"code-generation",
	"developer-productivity",
	"terminal-ai",
	"cli-tool",
	"shell-assistant",
	"copilot-alternative",
	"ai-workflows",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Code Generators",
	"Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
	"click>=8.0.0",
	"rich>=13.0.0",
	"httpx>=0.25.0",
	"anyio>=4.0.0",
	"pydantic>=2.0.0",
	"toml>=0.10.0",
	"tomli-w>=1.0.0",
	"ddgs>=6.0.0",
	"fastmcp>=2.0.0",
	"openai>=1.0.0",
	"tiktoken>=0.5.0",
	"platformdirs>=3.0.0",
	"prompt_toolkit>=3.0.0",
	"python-telegram-bot>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/naidu199/CharanCLI"
Repository = "https://github.com/naidu199/CharanCLI"

[project.scripts]
charancli = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = [
	"agent",
	"bot",
	"cli",
	"cli.commands",
	"client",
	"config",
	"context",
	"hooks",
	"prompts",
	"safety",
	"tools",
	"tools.builtin",
	"tools.mcp",
	"tools.workflow",
	"ui",
	"utils",
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
